[package]
name = "solana-btc-spv-program"
version = "1.3.0"
description = "Solana Bitcoin spv parsing program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"
[features]
no-entrypoint = []

[dependencies]
bincode = "1"
serde = {version = "1", features = ["derive"]}
solana-program = ">=1.10.0"
hex = "0.4.2"
static-pubkey = "1.0.2"
[dev-dependencies]
solana-sdk = ">=1.10.0"
[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
